<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="584dp"

        >

    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_index_route"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/index_home"/>
        <TextView
            android:id="@+id/txt_index_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textview_color"
            android:text="@string/Index_route"
            android:textSize="12sp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_index_map"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/index_share"/>
            <TextView
                android:id="@+id/txt_index_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textview_color"
                android:text="@string/Index_map"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_btn_index_message"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/index_message"/>
            <TextView
                android:id="@+id/txt_index_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Index_message"
                android:textColor="@color/textview_color"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btn_index_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/index_account"/>
            <TextView
                android:id="@+id/txt_index_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textview_color"
                android:text="@string/Index_profile"
                android:textSize="12sp"/>

        </LinearLayout>




</LinearLayout>

</LinearLayout>
