<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
       >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v4.view.ViewPager>


        <TextView
            android:id="@+id/imgtitle"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:layout_marginTop="170dp"
            />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="230dp">

            <ImageButton
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@drawable/dot_normal"/>
            <ImageButton
                android:id="@+id/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/dot_normal"/>

            <ImageButton
                android:id="@+id/dot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/dot_normal"/>

        </LinearLayout>

    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_allboard_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_circle_style_4"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/auto1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cirbtn_allboard_travel"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_find_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_circle_style_3"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/move"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cirbtn_self_find"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/travel_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_circle_style_2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ship"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cirbtn_information_find"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_informaiton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_circle_style"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/data"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Index_message"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"/>


            </LinearLayout>


    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFFFFF">



            <ListView
                android:id="@+id/listview_fragment1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>






        </LinearLayout>









</LinearLayout>
